feat: add audio recording, speech recognition, and text insertion modules
- Implemented AudioRecorder class for audio capture using node-record-lpcm16.
- Created HotkeyManager class to manage global hotkeys for push-to-talk and toggle listening.
- Developed SpeechRecogniser class to handle audio transcription using OpenAI Whisper API.
- Added TextInserter class for inserting recognized text into the active application using robotjs.
- Updated package.json with necessary dependencies and scripts for building and running the application.
- Configured TypeScript with tsconfig.json for strict type checking and module resolution.
- Created main entry point in index.ts to initialize and manage the application flow.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,21 @@
   "description": "Speech recognition script test",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc && node dist/index.js"
   },
   "author": "Ed Johnson (Neon Fish)",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "openai": "^4.20.1",
+    "robotjs": "^0.6.0",
+    "uiohook-napi": "^1.5.3",
+    "node-record-lpcm16": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "typescript": "^5.3.3"
+  }
 }
