--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "openai": "^4.20.1",
     "robotjs": "^0.6.0",
     "uiohook-napi": "^1.5.3",
-    "@picovoice/pvrecorder-node": "^1.2.2"
+    "@picovoice/pvrecorder-node": "^1.2.2",
+    "clipboardy": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
