--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsc && node dist/index.js"
+    "dev": "tsc && node dist/index.js",
+    "package": "npm run build && nexe dist/index.js -o speech-to-paste.exe --build --verbose"
   },
   "author": "Ed Johnson (Neon Fish)",
   "license": "UNLICENSED",
@@ -24,6 +25,7 @@
     "@types/node": "^20.10.0",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "nexe": "^4.0.0-rc.6"
   }
 }
