--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js",
-    "package": "npm run build && nexe dist/index.js -o speech-to-paste.exe --build --verbose"
+    "package": "npm run build && pkg . --compress Brotli"
   },
   "author": "Ed Johnson (Neon Fish)",
   "license": "UNLICENSED",
+  "bin": "dist/index.js",
   "dependencies": {
     "dotenv": "^16.3.1",
     "openai": "^4.20.1",
     "robotjs": "^0.6.0",
     "uiohook-napi": "^1.5.3",
     "@picovoice/pvrecorder-node": "^1.2.2",
-    "clipboardy": "^4.0.0",
+    "clipboardy": "2.3.0",
     "express": "^4.18.2",
     "cors": "^2.8.5"
   },
@@ -26,6 +27,18 @@
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "typescript": "^5.3.3",
-    "nexe": "^4.0.0-rc.6"
+    "@yao-pkg/pkg": "^5.11.5"
+  },
+  "pkg": {
+    "assets": [
+      "public/**/*",
+      "node_modules/@picovoice/pvrecorder-node/**/*",
+      "node_modules/robotjs/**/*",
+      "node_modules/uiohook-napi/**/*"
+    ],
+    "outputPath": "bin",
+    "targets": [
+      "node20-win-x64"
+    ]
   }
 }
