--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js",
-    "package": "npm run build && pkg . --compress Brotli"
+    "package": "npm run build && pkg . --compress Brotli",
+    "package2": "npm run build && pkg ."
   },
   "author": "Ed Johnson (Neon Fish)",
   "license": "UNLICENSED",
