--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@picovoice/pvrecorder-node": "^1.2.2",
     "clipboardy": "2.3.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "systray2": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
