--- a/package.json
+++ b/package.json
@@ -14,22 +14,24 @@
   "license": "UNLICENSED",
   "bin": "dist/index.js",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "openai": "^4.20.1",
-    "robotjs": "^0.6.0",
-    "uiohook-napi": "^1.5.3",
     "@picovoice/pvrecorder-node": "^1.2.2",
     "clipboardy": "2.3.0",
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "systray2": "^2.0.3"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "openai": "^4.20.1",
+    "robotjs": "^0.6.0",
+    "systray2": "^2.0.3",
+    "uiohook-napi": "^1.5.3"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
-    "@yao-pkg/pkg": "^5.11.5"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "@yao-pkg/pkg": "^5.11.5",
+    "canvas": "^3.2.0",
+    "png-to-ico": "^3.0.1",
+    "typescript": "^5.3.3"
   },
   "pkg": {
     "assets": [
