--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js",
-    "package": "npm run build && pkg . --compress Brotli",
-    "package2": "npm run build && pkg ."
+    "package": "npm run build && pkg . --compress Brotli"
   },
   "author": "Ed Johnson (Neon Fish)",
   "license": "UNLICENSED",
