--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "speech-script-test",
+  "name": "speech-to-paste",
   "version": "0.1.0",
-  "description": "Speech recognition script test",
+  "description": "Windows desktop application for speech-to-text transcription with automatic text insertion using OpenAI Whisper",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
