--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "openai": "^4.20.1",
+    "play-sound": "^1.1.6",
     "robotjs": "^0.6.0",
     "systray2": "^2.0.3",
     "uiohook-napi": "^1.5.3",
