feat: add mpg123 audio player for sound feedback and update audio playback logic

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "assets": [
       "public/**/*",
       "icons/**/*",
+      "lib/mpg123/**/*",
+      "assets/sounds/**/*",
       "node_modules/@picovoice/pvrecorder-node/**/*",
       "node_modules/robotjs/**/*",
       "node_modules/uiohook-napi/**/*",
