--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "bin": "dist/index.js",
   "dependencies": {
     "@picovoice/pvrecorder-node": "^1.2.2",
+    "@types/node-notifier": "^8.0.5",
     "clipboardy": "2.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node-notifier": "^10.0.1",
     "openai": "^4.20.1",
     "play-sound": "^1.1.6",
     "robotjs": "^0.6.0",
