--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     ],
     "outputPath": "bin",
     "targets": [
-      "node20-win-x64"
+      "node20-win-x64",
+      "node20-macos-x64",
+      "node20-macos-arm64",
+      "node20-linux-x64"
     ]
   }
 }
