--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "UNLICENSED",
   "bin": "dist/index.js",
   "dependencies": {
+    "@picovoice/leopard-node": "^3.0.0",
     "@picovoice/pvrecorder-node": "^1.2.2",
     "@types/node-notifier": "^8.0.5",
     "clipboardy": "2.3.0",
@@ -44,6 +45,7 @@
       "lib/mpg123/**/*",
       "assets/sounds/**/*",
       "node_modules/@picovoice/pvrecorder-node/**/*",
+      "node_modules/@picovoice/leopard-node/**/*",
       "node_modules/robotjs/**/*",
       "node_modules/uiohook-napi/**/*",
       "node_modules/whisper-node/**/*"
